<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="toolbar_share">Share</string>
    <string name="ok">OK</string>
    <string name="dismiss">dismiss</string>
    <string name="date">Date</string>
    <string name="expense">Expense</string>
    <string name="place">PLACE</string>
    <string name="dollar">$</string>

    <string name="empty_string">Add your first expense by pressing the fab</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_an_expense_content_desc">add an expense</string>
    <string name="fill_in_all_fields">Please fill in all the fields</string>

</resources>
