<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bottom_sheet_ok"
        android:text="@string/ok"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        style="@style/BottomSheetButton"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bottom_sheet_dismiss"
        android:text="@string/dismiss"
        android:background="?android:attr/selectableItemBackground"
        android:layout_toStartOf="@id/bottom_sheet_ok"
        style="@style/BottomSheetButton"/>

    <LinearLayout
        android:id="@+id/bottom_sheet_first_liner"
        android:layout_margin="@dimen/edge_margin_small"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bottom_sheet_date"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="@dimen/edge_margin_small"
            android:layout_height="0dp"/>

        <TextView
            android:text="@string/dollar"
            android:layout_gravity="bottom"
            android:paddingBottom="12dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bottom_sheet_expense"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/placeFragmentHolder"
        android:layout_below="@id/bottom_sheet_first_liner"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</RelativeLayout>